Fix styling (#5)
* Fix grid item numbers

* Position grid correctly

* Fix border overlapping and make grid more transparent if no focus available

* Beautify visible tool-button key-shortcut text and disable overflow: auto from tool-palette - disables animation after reopening the tool palette

* Make key shortcuts in tool palette only visible if focus is there

* Make tool palette order shortcuts from 1-0, instead of 0-9

--- a/packages/client/css/keyboard.css
+++ b/packages/client/css/keyboard.css
@@ -1,23 +1,34 @@
 .grid-container {
     display: grid;
+    position: absolute;
+    top: 0.5rem;
+    bottom: 0.5rem;
+    left: 0.5rem;
+    right: 0.5rem;
     grid-template-columns: auto auto auto;
-    padding: 10px;
-}
-.grid-item {
-    border: 1px solid black;
-    padding: 20px;
 }
 
-.numberCircleGrid {
+.grid-container:focus {
+    opacity: 1 !important;
+}
+
+.grid-item {
+    border: 1px solid rgba(0, 0, 0, 0.6);
+    padding: 1rem;
+    /* Fix overlapping borders */
+    margin: 0 -1px -1px 0;
+}
+
+.grid-item-number {
     border-radius: 50%;
-    width: 36px;
-    height: 36px;
-    padding: 8px;
+    width: 1.5rem;
+    height: 1.5rem;
+    padding: 0.5rem;
 
     background: #fff;
     border: 2px solid #666;
     color: black;
     text-align: center;
 
-    font: bold 30px Arial, sans-serif;
+    font: bold 1.3rem Arial, sans-serif;
 }
