--- a/packages/client/css/tool-palette.css
+++ b/packages/client/css/tool-palette.css
@@ -121,6 +121,29 @@
     margin-right: 0.4em;
 }
 
+.tool-button .key-shortcut {
+    display: none;
+    position: absolute;
+    left: -2rem;
+
+    border-radius: 50%;
+    width: 0.5rem;
+    height: 0.5rem;
+    padding: 8px;
+
+    background: #fff;
+    border: 2px solid #666;
+    color: black;
+    text-align: center;
+
+    font: bold 1rem Arial, sans-serif;
+    line-height: 0.5rem;
+}
+
+.tool-palette:focus-within .key-shortcut {
+    display: block;
+}
+
 .tool-button:hover {
     background: #dfdfdf;
 }
@@ -134,7 +157,6 @@
 }
 
 .collapsible-palette {
-    overflow: auto;
     transition: max-height 0.2s ease-out;
 }
 
@@ -152,18 +174,4 @@
     padding-left: 3px;
     width: 100%;
     margin: 3px;
-}
-.numberCircle {
-    border-radius: 50%;
-    width: 10px;
-    height: 10px;
-    padding: 8px;
-
-    background: #fff;
-    border: 2px solid #666;
-    color: black;
-    text-align: center;
-
-    font: bold 16px Arial, sans-serif;
-    margin-right: 10px;
 }
